[gd_scene load_steps=9 format=3 uid="uid://dtfh4gv88hofh"]

[ext_resource type="Script" uid="uid://bubx8gl2mon30" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="FontFile" uid="uid://c0ctvgys28b6k" path="res://Assets/fonts/Bring Race.otf" id="2_mae5d"]
[ext_resource type="AudioStream" uid="uid://bo720clg4tbcd" path="res://Sonidos/OZZY OSBOURNE - CRAZY TRAIN (LYRICS_LETRA) SUBTITULADA INGLÉS Y ESPAÑOL [IS7FJW7BmRk].mp3" id="2_ouk20"]
[ext_resource type="Texture2D" uid="uid://b2c41ermpfpxs" path="res://Assets/Background/494d69a2-d0c5-44fd-9dee-4f06a9af99df-removebg-preview.png" id="4_ytr4m"]
[ext_resource type="Texture2D" uid="uid://cmg52fegpeeka" path="res://Assets/Background/avion .png" id="5_l48gv"]
[ext_resource type="AudioStream" uid="uid://cujsw3yw5s467" path="res://Sonidos/hornero.mp3" id="6_l48gv"]
[ext_resource type="Texture2D" uid="uid://cvppm8dnha34w" path="res://Assets/Background/solDemayo.png" id="7_ecwwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l48gv"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -98.0
offset_top = -37.0
offset_right = 1240.0
offset_bottom = 697.0
color = Color(0.194774, 0.645823, 1, 1)

[node name="horneritoFigther" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.496
anchor_right = 0.496
offset_left = -553.392
offset_top = 52.0
offset_right = 591.608
offset_bottom = 132.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 65
text = "HORNERITO FIGHTER "
justification_flags = 171

[node name="tritones" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.051
anchor_bottom = 0.086
offset_left = 7.0
offset_top = 613.0
offset_right = 152.248
offset_bottom = 592.272
theme_override_fonts/font = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 25
text = "TRITON GAMES®"

[node name="menuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ouk20")
volume_db = -18.391

[node name="play" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516
anchor_top = 9.63
anchor_right = 0.516
anchor_bottom = 9.63
offset_left = -574.432
offset_top = -5990.24
offset_right = -281.432
offset_bottom = -5928.24
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.843137, 0.211765, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 46
text = "JUGAR"

[node name="exit" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 22.0
offset_top = 350.0
offset_right = 180.0
offset_bottom = 395.0
theme_override_colors/font_hover_color = Color(0.992157, 0.870588, 0.27451, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 28
text = "SALIR"

[node name="hornero" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(1027, 533)
scale = Vector2(0.632, 0.613)
texture = ExtResource("4_ytr4m")

[node name="Button_hornero" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 883.0
offset_top = 403.0
offset_right = 1156.0
offset_bottom = 651.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_l48gv")
flat = true

[node name="sonido_hornero" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_l48gv")
volume_db = -12.071

[node name="ColorRect2" type="ColorRect" parent="."]
process_priority = -2
layout_mode = 0
offset_left = -38.0
offset_top = 207.0
offset_right = 1192.0
offset_bottom = 433.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(566, 315)
scale = Vector2(0.416, 0.418)
texture = ExtResource("7_ecwwl")

[node name="avion" type="Sprite2D" parent="."]
position = Vector2(921, 458)
texture = ExtResource("5_l48gv")

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button_hornero" to="." method="_on_button_hornero_pressed"]
